Add a link in the index page to the recipe page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/Grilled-Shrimp-Salad.html"Grilled Shrimp Salad></a>
 </body>
 </html>
