adding an image to the recipe page

--- a/recipes/Grilled-Shrimp-Salad.html
+++ b/recipes/Grilled-Shrimp-Salad.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Grilled Shrimp Salad</h1>
+
+    <img src="/recipes/Grilled-Shrimp-Salad.webp" alt="Grilled Shrimp Salad in a bowl">
 </body>
 </html>
