--- a/recipes/Grilled-Shrimp-Salad.html
+++ b/recipes/Grilled-Shrimp-Salad.html
@@ -9,5 +9,8 @@
     <h1>Grilled Shrimp Salad</h1>
 
     <img src="/recipes/Grilled-Shrimp-Salad.webp" alt="Grilled Shrimp Salad in a bowl">
+
+    <h3> Summer Grilled Shrimp Salad</h3>
+    <p> I love to make main-dish salads in the summertime and serve them with some crusty bread and a nice glass of wine! This one is one of my favorites, featuring sweet and smoky grilled shrimp and a cilantro vinaigrette.</p>
 </body>
 </html>
