--- a/recipes/Grilled-Shrimp-Salad.html
+++ b/recipes/Grilled-Shrimp-Salad.html
@@ -12,5 +12,25 @@
 
     <h3> Summer Grilled Shrimp Salad</h3>
     <p> I love to make main-dish salads in the summertime and serve them with some crusty bread and a nice glass of wine! This one is one of my favorites, featuring sweet and smoky grilled shrimp and a cilantro vinaigrette.</p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>1 tablespoon olive oil</li>
+        <li>2 1/4 teaspoons lemon juice</li>
+        <li>12 ounces peeled and deveined shrimp</li>
+        <li>1/4 cup extra-virgin olive oil</li>
+        <li>2 tablespoons honey</li>
+        <li>2 tablespoons fresh line juice</li>
+        <li>2 tablespoons chopped cilantro</li>
+        <li>1 tablespoons balsamic vinegar</li>
+        <li>salt and ground black pepper to taste</li>
+        <li>4 cups mixed salad greens, or more to taste</li>
+        <li>1/2 cup thinly sliced English cucumber</li>
+        <li>1/3 cup freshly cooked corn</li>
+        <li>1/2 cup diced tomato</li>
+        <li>1/4 cup sliced red onion</li>
+        <li>1 avocado, diced</li>
+
+    </ul>
 </body>
 </html>
